Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-25989

Crash (or hang) during first startup after restoring backup

    XMLWordPrintable

Details

    Description

      If an ALTER TABLE that affected a table with FULLTEXT INDEX was running while a backup was taken, the server will crash or hang during the first startup, while trying to drop a #sql-alter- table that contains FULLTEXT INDEX.

      10.6

      #4  0x0000560bf4c51ed8 in dict_sys_t::assert_not_locked (this=<optimized out>) at /usr/include/pthread.h:1167
      #5  fts_optimize_remove_table (table=table@entry=0x618000002908) at /data/Server/bb-10.6-MDEV-25062C/storage/innobase/fts/fts0opt.cc:2594
      #6  0x0000560bf430924e in drop_garbage_tables_after_restore () at /data/Server/bb-10.6-MDEV-25062C/storage/innobase/handler/ha_innodb.cc:2027
      

      The logic that was implemented in MDEV-25854 had not been tested with tables that contain FULLTEXT INDEX.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.75h
                  0.75h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.